--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
+  <p>This is the first gitya</p>
 <p>muizya</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
